--- a/javascript-pixi/package.json
+++ b/javascript-pixi/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Tic Tac Toe powered by Colyseus",
   "scripts": {
-    "start": "parcel serve src/index.html --port 8080",
+    "start": "parcel src/index.html --port 8080",
     "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,14 +15,15 @@
   "author": "Endel Dreyer",
   "license": "MIT",
   "devDependencies": {
-    "parcel": "^2.9.3",
+    "buffer": "^6.0.3",
+    "parcel": "^2.13.3",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "url": "^0.11.1"
+    "url": "^0.11.4"
   },
   "dependencies": {
     "@gamestdio/timer": "^1.1.9",
-    "colyseus.js": "^0.15.10",
+    "colyseus.js": "^0.16.0",
     "pixi.js": "^4.7.3",
     "tweener": "^0.1.3"
   }
